tests/ui/set_ard.stderr
error[E0597]: `desc` does not live long enough
  --> $DIR/set_ard.rs:37:54
   |
37 |     stmt.SQLSetStmtAttrA(SQL_ATTR_APP_ROW_DESC, Some(&desc));
   |                                                      ^^^^^ borrowed value does not live long enough
...
41 | }
   | -
   | |
   | `desc` dropped here while still borrowed
   | borrow might be used here, when `stmt` is dropped and runs the destructor for type `SQLHSTMT<'_, '_, '_, SQL_OV_ODBC3_80>`
   |
   = note: values in a scope are dropped in the opposite order they are defined

error[E0505]: cannot move out of `desc` because it is borrowed
  --> $DIR/set_ard.rs:39:5
   |
37 |     stmt.SQLSetStmtAttrA(SQL_ATTR_APP_ROW_DESC, Some(&desc));
   |                                                      ----- borrow of `desc` occurs here
38 |
39 |     desc.SQLFreeHandle();
   |     ^^^^ move out of `desc` occurs here
40 |     stmt.SQLFreeHandle();
   |     ---- borrow later used here
